Sat  Sep 11  2004	H. Wade Minter (minter@lunenburg.org)
     * Fixed a similar bug in the edit_categories function.
     * Fixed an inaccuracy in progress reporting with update_times, due
       to the previous policy of ignoring invalid files.

Fri  Sep 10  2004	H. Wade Minter (minter@lunenburg.org)
     * Fixed a bug in the delete_categories function that was causing
       an extra space to get added to the category code.
     * Refactor the get_rows subroutine to be cleaner.

Thu  Sep 9  2004	H. Wade Minter (minter@lunenburg.org)
     * Move the default setup stuff (formerly in quicksetup.pl) into the
       main program, since we don't have to deal with the complexity of
       MySQL anymore.

Wed  Sep 8  2004	H. Wade Minter (minter@lunenburg.org)
     * Work around the lack of $dbh->rows in SQLite by implementing 
       a hand-rolled row counter.

Tue  Sep 7  2004	H. Wade Minter (minter@lunenburg.org)
     * Fixed a bug in the "Select new location for DB file" dialog in
       Preferences.
     * Moved the get_homedir code to a subroutine.
     * Bumped version to 2.0pre1

Mon  Sep 6  2004	H. Wade Minter (minter@lunenburg.org)
     * Happy birthday to me!
     * Added support for AAC files (.m4a, .mp4) via the MP4::Info module.
       Protected AAC (iTunes Music Store, .m4p) don't work.

Sun  Sep 5  2004	H. Wade Minter (minter@lunenburg.org)
     * Switch the updater to use SQLite transactions on the inserts, instead
       of autocommits.  Makes things much faster.

Fri  Sep 3  2004	H. Wade Minter (minter@lunenburg.org)
     * Give up on having the 2.0 updater in Perl/Tk and get it working
       via the console.
     * Begin documentation update for 2.0.

Wed  May 26 2004	H. Wade Minter (minter@lunenburg.org)
     * Switch from DBD::MySQL to DBD::SQLite
     * Move database schema into the __DATA__ block of mrvoice.pl

Tue  May 25 2004	H. Wade Minter (minter@lunenburg.org)
     * Display invalid songs (where there is an entry in the database, but